--- a/resources/assets/sass/components/admin.scss
+++ b/resources/assets/sass/components/admin.scss
@@ -160,7 +160,7 @@
 
                 a{
                     display: block;
-                    margin: 0.5em 0 0 -0.85em;
+                    margin: 0.5em 0 0 -0.55em;
                     width: 9.8em;
                     font-size: 1.25em;
                     text-align: center;
@@ -216,9 +216,11 @@
     .createForm{
         margin-top: 6em;
     }
-
-    .formAdmin{
-        margin: auto;
+.form{
+        .formAdmin{
+            margin: auto;
+            width: 100%;
+        }
     }
 
     .profile{
@@ -309,7 +311,7 @@
         }
     }
 
-    .form, .pure-form,.pure-form-aligned{
-        margin: 0 -3em 0 -12em;
-    }
+//    .form, .pure-form,.pure-form-aligned{
+//        margin: 0 -3em 0 -12em;
+//    }
 /*==============================================================*/
