--- a/resources/assets/sass/components/main.scss
+++ b/resources/assets/sass/components/main.scss
@@ -111,41 +111,48 @@ section{
 }
 
 .form{
-    #Form{
-        width: 20.5em;
+    margin: auto;
+    width: 70%;
+    
+    .contact{
         margin: auto;
-        
-        label{
-            width: 4.8em;
-            display: inline-block;
-        }
-        
-        input{
-            width: 15em;
-            height: 2em;
-            margin-top: -2em 0 0 6em;
-            display: inline-block;
-        }
-        
-        #Email{
-            margin-left: 2.75em;
-        }
-        
-        #Subject{
-            margin-left: 2.5em;
-        }
-        
-        #Message{
-            margin-top: -1.2em 0 0 6em;
-            width: 15em;
-        }
-        
-        #Send{
-            height: 3em;
-            width: 50%;
-            margin: 1em 0 1em 4.5em;
-            background-color: $primary-back-color;
-            border: none;
+        width: 100%;
+        #Form{
+            width: 21em;
+            margin: auto;
+
+            label{
+                width: 4.8em;
+                display: inline-block;
+            }
+
+            input{
+                width: 15em;
+                height: 2em;
+                margin-top: -2em 0 0 6em;
+                display: inline-block;
+            }
+
+            #Email{
+                margin-left: 2.75em;
+            }
+
+            #Subject{
+                margin-left: 2.5em;
+            }
+
+            #Message{
+                margin: -1.2em 0 0 6em;
+                width: 15em;
+            }
+
+            #Send{
+                height: 3em;
+                width: 50%;
+                margin: 1em 0 1em 4.5em;
+                background-color: $primary-back-color;
+                border: none;
+            }
         }
     }
 }
